# generic-proto-plus-stubs

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
.github/workflows/matchers/: isort.json
proto-stubs/: __init__.pyi  _file_info.pyi  _package_info.pyi  datetime_helpers.pyi  enums.pyi  fields.pyi  message.pyi  modules.pyi  primitives.pyi  utils.pyi
proto-stubs/marshal/: __init__.pyi  compat.pyi  marshal.pyi
proto-stubs/marshal/collections/: __init__.pyi  maps.pyi  repeated.pyi
proto-stubs/marshal/rules/: dates.pyi  enums.pyi  message.pyi  struct.pyi  wrappers.pyi
