[tool.poetry]
name = "proto-plus-stubs"
version = "0.1.0"
license = "Apache-2.0"
description = "Type stubs for proto-plus"
authors = ["Henrik Bruåsdal <henrik.bruasdal@gmail.com>"]
readme = "README.md"
repository = "https://github.com/henribru/proto-plus-stubs"
packages = [
    { include = "proto-stubs" },
]
classifiers = [
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
proto-plus = "^1.18.0"
types-protobuf = "^3.17.4"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
isort = "^5.9.3"
black = "^21.9b0"

[tool.isort]
profile = "black"
known_first_party = "proto"
combine_as_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
