[metadata]
name = generic-proto-plus-stubs
license = Apache-2.0
description = Manually updated type stubs for proto-plus with some generics
author = Maximilian Schmidt
author_email = landlaeufer@gmail.com
readme = README.md
url = https://github.com/saggitar/generic-proto-plus-stubs
classifiers =
    Programming Language :: Python :: 3
    Typing :: Typed

[options]
python_requires = >=3.7

install_requires =
    proto-plus >= 1.19.8
    types-protobuf == 3.18.2
    protobuf == 3.20.1
